Fixing Slick carousel overflow-x

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ header {
     width: 100%;
     margin: 0 auto;
     max-height: 80vh;
+    overflow-x: hidden;
 }
 
 #titulo {
